# KiPyGeneratorTasks

./: .flake8  .gitignore  pyproject.toml  readme.md
.github/workflows/: linters.yml  python-package.yml
speed_tests/: generation.py  validation.py
src/gentasks/: __init__.py  composition_classes.py  constants.py  exceptions.py  exercise.py  task_generator.py  tasktypes.py
tests/: test_generation.py  test_tasktypes.py
