[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gentasks"
authors = [
    {name = "ArtichaTM", email = "tima-1324@mail.ru"}
]
description = "Package to generate tasks on generators creation"
readme = "readme.md"
version = "1.0.0"
dependencies = []
requires-python='>=3.10.11'

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default
#exclude = ["mypackage.tests*"]  # empty by default
namespaces = false  # true by default
